iMMAP to ANDMA Logo

--- a/dashboard/templates/v2/custombase.html
+++ b/dashboard/templates/v2/custombase.html
@@ -96,11 +96,11 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <div class="logo">
-                  <a id="logo" class="brand-usaid" href="{% url 'v2:home' %}">
+                  <!-- <a id="logo" class="brand-usaid" href="{% url 'v2:home' %}">
                     <img src="{{ STATIC_URL }}v2/images/USAID-Identity_reduce.png">
-                  </a>
+                  </a> -->
                   <a id="logo2" class="navbar-brand-immap" href="{% url 'v2:home' %}">
-                    <img src="{{ STATIC_URL }}v2/images/iMMAP.png">
+                    <img src="{{ STATIC_URL }}v2/images/ANDMA.png">
                     <h1 class="webTitle">{% trans "Afghanistan Spatial Data Center" %}</h1>
                   </a>
                 </div>
@@ -286,7 +286,7 @@
             <div class="row">
                 <div class="col-md-5 cp">
                     &copy; 2016
-                    <a target="_blank" href="http://immap.org/" title="iMMAP">iMMAP</a>. All Rights Reserved.
+                    <a target="_blank" href="http://immap.org/" title="iMMAP">iMMAP</a>. All Rights Reserved. Funded by USAID
                 </div>
                 <!--/Copyright-->
                 <div class="col-md-6 hidden-print">
