--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -81,11 +81,11 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <div class="logo">
-                  <a id="logo" class="brand-usaid" href="{% url 'v2:home' %}">
+                 <!--  <a id="logo" class="brand-usaid" href="{% url 'v2:home' %}">
                     <img src="{{ STATIC_URL }}v2/images/USAID-Identity_reduce.png">
-                  </a>
+                  </a> -->
                   <a id="logo2" class="navbar-brand-immap" href="{% url 'v2:home' %}">
-                    <img src="{{ STATIC_URL }}v2/images/iMMAP.png">
+                    <img src="{{ STATIC_URL }}v2/images/ANDMA.png">
                     <h1 class="webTitle">{% trans "Afghanistan Spatial Data Center" %}</h1>
                   </a>
                 </div>
@@ -266,7 +266,7 @@
             <div class="row">
                 <div class="col-md-5 cp">
                     &copy; 2016
-                    <a target="_blank" href="http://immap.org/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "iMMAP" %}</a>. All Rights Reserved.
+                    <a target="_blank" href="http://immap.org/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "iMMAP" %}</a>. All Rights Reserved. Funded by USAID
                 </div>
                 <!--/Copyright-->
                 <div class="col-md-6">
