--- a/geonode/static/v2/css/custom.css
+++ b/geonode/static/v2/css/custom.css
@@ -5880,3 +5880,7 @@ input#villageIDSearchForm.x-form-text.x-form-field.x-form-focus {
     border-top: solid;
     border-color: #a61000;
 }
+
+.webTitle {
+    margin-left: 15px;
+}
